# fast_api_to_do_list

./: .gitignore  LICENSE  README.md  db.sqlite3  db.sqlite3-shm  main.py  pyproject.toml  run_test.py
tests/: test_to_do.py
toDoApp/: crud.py  models.py  schemas.py
toDoApp/routers/: tasks.py
toDoAppFrontend/: lists.html  website.css  website.js
